--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
+<!doctype html>
 <html>
+<head>
+<!-- Google Fonts --> <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">  <!-- CSS Reset --> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">  <!-- Milligram CSS --> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">  <!-- You should properly set the path from the main file. -->
 <title>Mickle Meal | About</title>
+</head>
 <body>
+<div class="container">
+<h1 id="howdy">Howdy!</h1>
 
+<h2 id="im-mike-mehl">I’m Mike Mehl.</h2>
 
-<h1 id="howdy">Howdy.</h1>
+<p>This is where I post about things I’m doing, things I’m learning, things I’m interested in, and a bunch of other random stuff that I feel like putting up here.</p>
 
-<h2 id="i-m-mike-mehl">I&rsquo;m Mike Mehl.</h2>
+<p>It’s more for me than it is for you (sorry), but if you like it or use it, that’s great.</p>
 
-<p>I&rsquo;m a musician and software engineer, and you&rsquo;re on my website.</p>
+<p>And yes…..I know there’s nothing here yet.</p>
 
-<p>I plan to use this as a dumping ground for things I&rsquo;m working on, things I&rsquo;m learning about, general thoughts, and cool things I find on the internet.</p>
-
-<p>Hope ya&rsquo; enjoy&hellip;.when there&rsquo;s actually stuff here.</p>
-
+</div>
 </body>
 </html>
