--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 </head>
 <body>
 <div class="container">
+<nav>
+
+<a class="button button-clear" href="/">About</a>
+
+<a class="button button-clear" href="/projects">Projects</a>
+
+<a class="button button-clear" href="/things">Things</a>
+
+<a class="button button-clear" href="/resume">Resume</a>
+
+</nav>
 <h1 id="howdy">Howdy!</h1>
 
 <h2 id="im-mike-mehl">I’m Mike Mehl.</h2>
