More stuff hoorary.

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<!-- Google Fonts --> <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">  <!-- CSS Reset --> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">  <!-- Milligram CSS --> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">  <!-- You should properly set the path from the main file. -->
+<link rel="stylesheet" href="https://unpkg.com/normalize.css"> <link rel="stylesheet" href="https://unpkg.com/concrete.css">
 <title>Mickle Meal | Projects</title>
 </head>
 <body>
@@ -17,9 +17,12 @@
 <a class="button button-clear" href="/resume">Resume</a>
 
 </nav>
+
 <h1 id="projects">Projects</h1>
 
 <h2 id="seqstk">SeqStk</h2>
+
+<p><a href="https://github.com/mikemehl/SeqStack">Source</a>.</p>
 
 <p>A virtual stack machine whose input and output is through…more stacks! Trying to keep this one minimal and flexible, so writing in Rust and avoiding any external dependencies.</p>
 
@@ -46,6 +49,10 @@
 
 <h3 id="isa">ISA</h3>
 
+<h4 id="instruction-format">Instruction Format</h4>
+
+<p>Instructions are a byte each. The 3 most significant bits determine the instruction type, and how to interpret the rest of the instruction. Generally, the next n bits determine the specific instruction, with the remaining bits determining the adressing mode or other parameters. Operations do not generally support all adressing modes. See the list of all operations below.</p>
+
 <h4 id="adressing-modes">Adressing Modes</h4>
 
 <p>Where supported, addressing modes are represented by two bits in the instruction byte.</p>
@@ -71,11 +78,10 @@
       <li>Adressing Modes: Stack.
         <ul>
           <li>110 - Pop</li>
-          <li>101 - Drop</li>
-          <li>100 - Dup</li>
-          <li>011 - Rot</li>
-          <li>010 - MovToRts</li>
-          <li>001 - MovFromRts</li>
+          <li>101 - Dup</li>
+          <li>100 - Rot</li>
+          <li>011 - MovToRts</li>
+          <li>010 - MovFromRts</li>
         </ul>
       </li>
     </ul>
@@ -156,6 +162,11 @@
   </li>
 </ul>
 
+<footer>
+<hr style="border: 0; height: 1px; background-image: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,0.75), rgba(255,255,255,0));">
+<a href="https://github.com/mikemehl">GitHub</a>
+</footer>
 </div>
 </body>
+
 </html>
