--- a/things/index.html
+++ b/things/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<!-- Google Fonts --> <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">  <!-- CSS Reset --> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">  <!-- Milligram CSS --> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">  <!-- You should properly set the path from the main file. -->
+<link rel="stylesheet" href="https://unpkg.com/normalize.css"> <link rel="stylesheet" href="https://unpkg.com/concrete.css">
 <title>Mickle Meal | Things</title>
 </head>
 <body>
@@ -17,10 +17,16 @@
 <a class="button button-clear" href="/resume">Resume</a>
 
 </nav>
+
 <h1 id="things">Things</h1>
 
 <p>Random stuff I’m interested in, ofc.</p>
 
+<footer>
+<hr style="border: 0; height: 1px; background-image: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,0.75), rgba(255,255,255,0));">
+<a href="https://github.com/mikemehl">GitHub</a>
+</footer>
 </div>
 </body>
+
 </html>
