--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 <div class="container">
 <nav>
 
-<a class="button button-clear" href="/">About</a>
 
-<a class="button button-clear" href="/projects">Projects</a>
+<a class="button" href="/">About</a>
 
-<a class="button button-clear" href="/things">Things</a>
+<a class="button" href="/projects">Projects</a>
 
-<a class="button button-clear" href="/resume">Resume</a>
+<a class="button" href="/things">Things</a>
+
+<a class="button" href="/resume">Resume</a>
 
 </nav>
 
