--- a/resume/index.html
+++ b/resume/index.html
@@ -8,77 +8,18 @@
 <div class="container">
 <nav>
 
-<a class="button button-clear" href="/">About</a>
 
-<a class="button button-clear" href="/projects">Projects</a>
+<a class="button" href="/">About</a>
 
-<a class="button button-clear" href="/things">Things</a>
+<a class="button" href="/projects">Projects</a>
 
-<a class="button button-clear" href="/resume">Resume</a>
+<a class="button" href="/things">Things</a>
+
+<a class="button" href="/resume">Resume</a>
 
 </nav>
 
-<h1 id="resume">Resume</h1>
-
-<h2 id="education">Education</h2>
-
-<hr />
-
-<h3 id="ms-computer-science">MS: Computer Science</h3>
-
-<h4 id="georgia-tech">Georgia Tech</h4>
-
-<p><strong>Atlanta, Georgia</strong></p>
-
-<p><em>In progress</em></p>
-
-<p>August 2020 - Present</p>
-
-<hr />
-
-<h3 id="bs-computer-science">BS: Computer Science</h3>
-
-<h4 id="university-of-maryland-baltimore-county">University of Maryland, Baltimore County</h4>
-
-<p><strong>Catonsville, Maryland</strong></p>
-
-<p>August 2016 - December 2018</p>
-
-<p>GPA: 3.8</p>
-
-<p>Additional Major: Mathematics.</p>
-
-<p>Honor Societies: Pi Mu Epsilon.</p>
-
-<hr />
-
-<h3 id="as-computer-science">AS: Computer Science</h3>
-
-<h4 id="anne-arundel-community-college">Anne Arundel Community College</h4>
-
-<p><strong>Arnold, Maryland</strong></p>
-
-<p>January 2014 - June 2014</p>
-
-<p>GPA: 3.7</p>
-
-<hr />
-
-<h3 id="as-mathematics">AS: Mathematics</h3>
-
-<h4 id="anne-arundel-community-college-1">Anne Arundel Community College</h4>
-
-<p><strong>Arnold, Maryland</strong></p>
-
-<p>January 2014 - June 2014</p>
-
-<p>GPA: 3.7</p>
-
-<hr />
-
-<h2 id="everything-else">Everything Else</h2>
-
-<p>TODO</p>
+<h1 id="todo">TODO</h1>
 
 <footer>
 <hr style="border: 0; height: 1px; background-image: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,0.75), rgba(255,255,255,0));">
