--- a/projects/index.html
+++ b/projects/index.html
@@ -73,9 +73,9 @@
       <li>Adressing Modes: Stack.
         <ul>
           <li>110 - Pop</li>
-          <li>101 - Drop</li>
-          <li>100 - Dup</li>
-          <li>011 - Rot</li>
+          <li>101 - Dup</li>
+          <li>100 - Rot</li>
+          <li>011 - Swap</li>
           <li>010 - MovToRts</li>
           <li>001 - MovFromRts</li>
         </ul>
